--- a/css/fonts.css
+++ b/css/fonts.css
@@ -5,6 +5,7 @@
   src: local(''),
   url("../fonts/Montserrat-Regular.woff") format("woff"),
   url("../fonts/Montserrat-Regular.woff2") format('woff2');
+  font-display: swap;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
   src: local(''),
   url("../fonts/Montserrat-LightItalic.woff") format("woff"),
   url("../fonts/Montserrat-LightItalic.woff2") format('woff2');
+  font-display: swap;
 }
 
 @font-face {
@@ -23,4 +25,5 @@
   src: local(''),
   url("../fonts/Montserrat-SemiBold.woff") format("woff"),
   url("../fonts/Montserrat-SemiBold.woff2") format('woff2');
+  font-display: swap;
 }
