--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ textarea{
 .hero-wrapper {
   padding-top: 97px;
   padding-bottom: 95px;
-  background-image: url("../img/hero/hero-bg.png");
+  background-image: url("../img/hero/hero-bg.webp");
   background-repeat: no-repeat;
   background-position: right;
 }
